src/objects/csconta__Billing_Account__c.object
<CustomObject>
    <fields>
        <fullName>ADDTTURL__c</fullName>
        <formula>IF( AND ( ISPICKVAL(PaymentMethods__c , &apos;Direct Debit&apos;) ,LG_PaperDDMandate__c ==false), $Setup.ADDTTSiteURL__c.LG_URL__c+&apos;addtt?p0=&apos;+EncryptedID__c+&apos;&amp;p1=&apos;, &apos;&apos;)</formula>
        <label>ADDTT URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Balance__c</fullName>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>csconta__Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>IF($Profile.Name == &apos;UM_Partner&apos;, 
HYPERLINK(&quot;https://uat-unitymedia.cs83.force.com/partners/&quot; &amp; Id, LG_BillingAccountNumber__c,&quot;_parent&quot;), 
HYPERLINK(&quot;/&quot; &amp; Id , LG_BillingAccountNumber__c, &quot;_parent&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Accounts</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_First_Name__c</fullName>
        <formula>Billing_Contact__r.FirstName</formula>
        <label>Billing Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact_Last_Name__c</fullName>
        <formula>Billing_Contact__r.LastName</formula>
        <label>Billing Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cable_master_ID__c</fullName>
        <label>Cable master ID</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_AccountID__c</fullName>
        <formula>LG_BillingAccountNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga_AccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_AccountNameExtension__c</fullName>
        <formula>csconta__Account__r.UM_Legal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_AccountName__c</fullName>
        <formula>csconta__Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conga_salutation__c</fullName>
        <formula>Billing_Contact__r.LG_SalutationLocal__c  &amp; &apos; &apos; &amp;  Billing_Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga_salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivation_Kenan_response__c</fullName>
        <description>Text field to capture Kenan response for deactivation of BA</description>
        <label>Deactivation Kenan response</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deactivation_date__c</fullName>
        <label>Deactivation date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EncryptedID__c</fullName>
        <label>Encrypted ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_address__c</fullName>
        <formula>csconta__Street__c  &amp; &quot; &quot; &amp; LG_HouseNumber__c &amp; &quot; &quot; &amp; LG_HouseNumberExtension__c &amp; &quot; ,&quot; &amp; csconta__Postcode__c &amp; &quot; &quot; &amp;csconta__City__c</formula>
        <label>Full address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Infonova__c</fullName>
        <externalId>true</externalId>
        <label>Infonova ID</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Kenan_billing_status__c</fullName>
        <label>Kenan billing status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountHolder__c</fullName>
        <description>Name registered to the Bank Account number</description>
        <label>Bank Account Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BankAccountNumberIBAN__c</fullName>
        <label>Bank Account Number (IBAN)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountIdentifier__c</fullName>
        <formula>Name &amp; &quot; - &quot; &amp; TEXT(LG_PaymentType__c) &amp; &quot; &quot; &amp; LG_BankAccountNumberIBAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountName__c</fullName>
        <description>Field is updated with Account name on creation</description>
        <label>Billing Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_BillingAccountNumber__c</fullName>
        <displayFormat>61{00000000}</displayFormat>
        <label>Billing Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LG_BillingContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Account</relationshipLabel>
        <relationshipName>Billing_Account</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_BillingEmailAddress__c</fullName>
        <label>Billing Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Contact_FirstName__c</fullName>
        <label>Billing Contact FirstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Contact_LastName__c</fullName>
        <label>Billing Contact LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Billing_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts (Billing Contact)</relationshipLabel>
        <relationshipName>Billing_Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_ContractualOrganization__c</fullName>
        <label>Contractual Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LG_ContractualOrganization</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_CustomerReference__c</fullName>
        <label>Customer Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defines if the Billing Account should be used as a default Billing Account</description>
        <label>Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_DeliveryMethod__c</fullName>
        <label>Delivery Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                    <default>true</default>
                    <label>Email</label>
                </value>
                <value>
                    <fullName>Post</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_DirectDebitMandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Debit Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_ExternalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LG_ExternalSystem__c</fullName>
        <description>Holds the name of the Billing Account&apos;s External System.</description>
        <label>External System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICOMS</fullName>
                </value>
                <value>
                    <fullName>RBM</fullName>
                </value>
                <value>
                    <fullName>Kenan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_HouseNumberExtension__c</fullName>
        <label>House Number Extension</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_HouseNumber__c</fullName>
        <label>House Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_In_Collections__c</fullName>
        <defaultValue>false</defaultValue>
        <description>mark if an account is in debt or not</description>
        <inlineHelpText>mark if an account is in debt or not</inlineHelpText>
        <label>In Collections</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_LogicalBillingAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Logical Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Billing Accounts (Logical Billing Account)</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_MandateEndDate__c</fullName>
        <label>Mandate End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MandateStartDate__c</fullName>
        <label>Mandate Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LG_MyBillAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MyBill Account Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.csconta__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Billing Accounts (Contact)</relationshipLabel>
        <relationshipName>Billing_Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_MyBillAddress__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MyBill Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscrm__Address__c.cscrm__Account__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.csconta__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Billing Accounts (MyBill Address)</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LG_MyBillBillingSysAccId__c</fullName>
        <externalId>true</externalId>
        <label>Billing System Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MyBillContactFirstName__c</fullName>
        <label>MyBill Billing Contact First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MyBillContactLastName__c</fullName>
        <label>MyBill Billing Contact Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_MyBillEmail__c</fullName>
        <label>MyBill Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LG_MyBillExists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MyBill Exists?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_MyBillMobile__c</fullName>
        <label>MyBill Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LG_MyBillPhone__c</fullName>
        <label>MyBill Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>LG_MyBill_Customer_Id__c</fullName>
        <description>External Reference to MyBill Customer Id</description>
        <externalId>true</externalId>
        <label>MyBill Customer Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Override_Billing_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Billing Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PaperDDMandate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Paper DD Mandate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_PaymentType__c</fullName>
        <description>Payment Type / Method used by the customer</description>
        <label>Payment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Self-payer</fullName>
                    <default>true</default>
                    <label>Self-payer</label>
                </value>
                <value>
                    <fullName>Direct Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_PreviousMasterAccount__c</fullName>
        <label>Previous Master Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_State__c</fullName>
        <label>Billing State</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ICOMS</fullName>
                </value>
                <value>
                    <fullName>RBM</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandate_reference_number__c</fullName>
        <description>Mandate reference number</description>
        <label>Mandate reference number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Billing Account assigned to Opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PaymentMethods__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Direct Debit</fullName>
                    <default>true</default>
                    <label>Direct Debit</label>
                </value>
                <value>
                    <fullName>BACS</fullName>
                </value>
                <value>
                    <fullName>CHAPS</fullName>
                </value>
                <value>
                    <fullName>Giro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist_request__c</fullName>
        <inlineHelpText>This choice triggers an email with the request as chosen to the back-office to process in Kenan</inlineHelpText>
        <label>Collection request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Collection freeze</fullName>
                </value>
                <value>
                    <fullName>Collection re-continue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_PO_Number__c</fullName>
        <label>Subscription PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountNumberBic__c</fullName>
        <label>BIC code</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BankAccountType__c</fullName>
        <label>Bank Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>UM_BankAccountType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_BillFormatOptions__c</fullName>
        <label>Bill Format Option</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Summary</fullName>
                    <default>true</default>
                    <label>Summary</label>
                </value>
                <value>
                    <fullName>With itemized bill - masked last 3 digits</fullName>
                </value>
                <value>
                    <fullName>With itemized bill - full unmasked numbers</fullName>
                </value>
                <value>
                    <fullName>Summary - no itemized bill</fullName>
                    <isActive>false</isActive>
                    <label>Summary - no itemized bill</label>
                </value>
                <value>
                    <fullName>With itemized bill - full unmasked numbers - full EVN</fullName>
                    <isActive>false</isActive>
                    <label>With itemized bill - full unmasked numbers - full EVN</label>
                </value>
                <value>
                    <fullName>With itemized bill - masked last 3 digits - partial EVN</fullName>
                    <isActive>false</isActive>
                    <label>With itemized bill - masked last 3 digits - partial EVN</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Billing_Account_withPaymentInfo__c</fullName>
        <formula>LG_BillingAccountNumber__c &amp; &quot; - &quot; &amp; TEXT(LG_PaymentType__c) &amp; &quot; &quot; &amp; LG_BankAccountNumberIBAN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account withPaymentInfo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Billing_State_Province__c</fullName>
        <description>State\Province field</description>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Hold_Reason__c</fullName>
        <description>If status is set to “hold for collection”, reason is mandatory</description>
        <label>Collection Hold Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer contact required</fullName>
                </value>
                <value>
                    <fullName>Customer rejects the correctness of the invoice</fullName>
                </value>
                <value>
                    <fullName>In contract negotiations</fullName>
                </value>
                <value>
                    <fullName>Charge in invoice unclear</fullName>
                </value>
                <value>
                    <fullName>Customer has paid to incorect account</fullName>
                </value>
                <value>
                    <fullName>Payment term in invoice different than what was agreed</fullName>
                </value>
                <value>
                    <fullName>Situation to be decided by Unitymedia&apos;s managing director</fullName>
                </value>
                <value>
                    <fullName>Letter from laywer or consumer protection received</fullName>
                </value>
                <value>
                    <fullName>Freeze request for any other reason</fullName>
                </value>
                <value>
                    <fullName>Open HOLD for any other reason</fullName>
                    <isActive>false</isActive>
                    <label>Open HOLD for any other reason</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UM_Collection_Hold_Remaining_Days__c</fullName>
        <formula>IF(ISPICKVAL(UM_Collection_Hold_Reason__c, &quot;&quot;),
   NULL,
  (UM_Collection_Reason_Change_Date__c - TODAY() + 
   CASE(UM_Collection_Hold_Reason__c,
        &quot;In contract negotiations&quot;, 60,
        &quot;Situation to be decided by Unitymedia&apos;s managing director&quot;, 60,
        30)))</formula>
        <label>Collection Hold Remaining Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Collection_Reason_Change_Date__c</fullName>
        <label>Collection Reason Change Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_CongaUMEntity__c</fullName>
        <formula>IF( ISPICKVAL(LG_ContractualOrganization__c, &apos;Hessen (HSN)&apos;), &apos;Unitymedia Hessen GmbH &amp; Co KG&apos;, 
  IF( ISPICKVAL(LG_ContractualOrganization__c, &apos;Baden-Württemberg (BAW)&apos;), &apos;Unitymedia BW GmbH&apos;, 
    IF( ISPICKVAL(LG_ContractualOrganization__c, &apos;Nordrhein-Westfalen (NRW)&apos;), &apos;Unitymedia NRW GmbH&apos;, &apos;&apos;)
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conga UM Entity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Create_Payment_Profile_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Create Payment Profile in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IBANValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IBAN Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_IsAccountSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Account Synced</label>
        <type>Checkbox</type>
    </fields>
     <fields>
        <fullName>UM_IsDecativateSynced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deactivate Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_Kenan_Sync_Message__c</fullName>
        <label>Kenan Sync Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>UM_LastSyncedwithBilling__c</fullName>
        <label>Last Synced with Billing</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UM_MandateReferenceNumber__c</fullName>
        <description>Mandate reference number</description>
        <label>Mandate reference number</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Print_TVO_Info__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for Kenan to print additional Information on invoice on custom demand</description>
        <label>Print TVO Info</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_SalesId__c</fullName>
        <label>Sales ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csconta__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Address</label>
        <referenceTo>cscrm__Address__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Channel__c</fullName>
        <label>Billing Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Paper</fullName>
                    <default>true</default>
                    <label>Paper</label>
                </value>
                <value>
                    <fullName>E-Mail PDF</fullName>
                </value>
                <value>
                    <fullName>Paper + E-Mail PDF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Billing_City__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c ,   csconta__Address__r.cscrm__City__c , csconta__Account__r.BillingCity)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Country__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Country__c  ,csconta__Account__r.BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Cycle__c</fullName>
        <formula>Text(csconta__Account__r.csconta__Billing_Cycle__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Cycle</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Language__c</fullName>
        <label>Billing Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Finnish</fullName>
                </value>
                <value>
                    <fullName>Swedish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Billing_Postcode__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Zip_Postal_Code__c,  csconta__Account__r.BillingPostalCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Postcode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Billing_Street__c</fullName>
        <formula>IF( csconta__Override_Account_Address__c,  csconta__Address__r.cscrm__Street__c,  csconta__Account__r.BillingStreet)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Financial_Account_Number__c</fullName>
        <label>Financial Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Format_Type__c</fullName>
        <label>Format Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unused</label>
        <referenceTo>csord__Order__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Override_Account_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Account Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csconta__Parent_Billing_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Billing Accounts</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly 1st - 30 days payment term</fullName>
                </value>
                <value>
                    <fullName>M02 - Test</fullName>
                </value>
                <value>
                    <fullName>M09 - Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Postcode__c</fullName>
        <label>Postcode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not used</description>
        <inlineHelpText>This field is not used</inlineHelpText>
        <label>Unused</label>
        <referenceTo>csord__Service__c</referenceTo>
        <relationshipLabel>Unused</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>csconta__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending activation</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Pending disconnection</fullName>
                </value>
                <value>
                    <fullName>Disconnected</fullName>
                </value>
		<value>
                    <fullName>Deactivation Requested</fullName>
                </value>
		<value>
                    <fullName>Deactivation Pending</fullName>
                </value>
		<value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csconta__Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csconta__Subscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is not used</description>
        <inlineHelpText>This field is not used</inlineHelpText>
        <label>Unused</label>
        <referenceTo>csord__Subscription__c</referenceTo>
        <relationshipLabel>Unused</relationshipLabel>
        <relationshipName>Billing_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Billing Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LG_PaymentType__c</columns>
        <columns>Conga_AccountName__c</columns>
        <columns>UM_BankName__c</columns>
        <columns>LG_ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>